Add multiset reasoning option

--- a/src/options/strings_options.toml
+++ b/src/options/strings_options.toml
@@ -252,3 +252,12 @@ header = "options/strings_options.h"
   default    = "true"
   read_only  = true
   help       = "Enable the contains entailment checks in the strings rewriter"
+
+[[option]]
+  name       = "stringsRewriterMultisetReasoning"
+  category   = "expert"
+  long       = "strings-rewriter-multiset-reasoning"
+  type       = "bool"
+  default    = "true"
+  read_only  = true
+  help       = "Enable multiset reasoning in the strings rewriter"
