Fix concat-find regexp elimination
Fixes #2982. The `concat-find` regexp elimination has an off-by-one
error in the upper bound of the quantifier. For example, for `(str.in.re
x (re.++ R1 "A" R2))`, the upper bound for the quantifier variable in
the eliminated term was `(< k (- (str.len x) 1))`. However, it should be
`(< k (- (str.len x) 1))` because we have to account for the case where
`"A"` is at the end of the string, i.e. at position `(- (str.len x) 1)`.
This commit fixes the issue and moves two assertions that were too
aggressive.

--- a/test/regress/CMakeLists.txt
+++ b/test/regress/CMakeLists.txt
@@ -1537,6 +1537,7 @@ set(regress_1_tests
   regress1/strings/issue1684-regex.smt2
   regress1/strings/issue2060.smt2
   regress1/strings/issue2429-code.smt2
+  regress1/strings/issue2982.smt2
   regress1/strings/kaluza-fl.smt2
   regress1/strings/loop002.smt2
   regress1/strings/loop003.smt2
